fix: update images on manual scroll, add fancy scrollbar to server channels list

--- a/src/components/DMPanel/DMPanel.scss
+++ b/src/components/DMPanel/DMPanel.scss
@@ -14,7 +14,7 @@
   }
 }
 
-#DMPanel, #ChannelsList {
+#DMPanel, #ChannelsContainer {
   QScrollBar {
     height: 8px;
     width: 8px;
